@@ -8,16 +8,6 @@
   width: 17px;
 }
 
-.inboxStatus {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 12px;
-  border-top: 1px dashed #DDDDDD;
-}
-
-.inboxStatus table {
-  width: 100%;
-}
-
 .prefs {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 12px;
@@ -449,6 +439,13 @@ img.sort {
 
 #inboxTable .column5 {
   text-align: right;
+}
+
+#inboxStatus {
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+  border-top: 1px dashed #DDDDDD;
 }
 
 .send {
