@@ -31,6 +31,8 @@ NOCC 1.4    ?? ??, 200?
     * RFE #1639527 : Setting for mailbox column order (Tim Gerundt).
 
   Misc
+    * Move "Inbox Status" outside <TABLE> for more structured HTML (Tim
+      Gerundt).
     * Improve count of unseen messages into status line speed (Dirk Hoeschen).
     * UCB POP server and quota are now per server settings (Arnaud Boudou).
     * Improve "To:" address display in message list (Arnaud Boudou).
